Fixed lots of bugs in the handling of 'break'.